[package]
name = "bitf"
version = "1.1.0"
authors = ["hrafnskogr <hrafnskogr@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "This crate provides a procedural macro to easily create a bitfield out of a struct"
repository = "https://github.com/hrafnskogr/bitf"
readme = "README.md"
keywords = ["bitfield", "bit", "bitfields"]
categories = ["data-structures",]


[lib]
proc-macro = true

[dependencies]
syn = { version=">=1.0.84", features=["full", "fold"] }
quote = ">=1.0.10"
proc-macro2 = ">=1.0.34"
